# att

./: .env.example  pyproject.toml
config/: settings.py  urls.py
electronics/: admin.py  models.py  paginators.py  serializers.py  validators.py  views.py
electronics/migrations/: 0001_initial.py  0002_alter_seller_supplier_choice_and_more.py
users/: models.py  serializers.py  urls.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_phone.py
