[tool.poetry]
name = "final"
version = "0.1.0"
description = ""
authors = ["Pavel <pashapasha-2013@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
djangorestframework = "^3.15.2"
psycopg2 = "^2.9.9"
django-cors-headers = "^4.4.0"
djoser = "^2.2.3"
drf-yasg = "^1.21.7"
python-dotenv = "^1.0.1"
redis = "^5.0.7"
eventlet = "^0.36.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
